# zebrafish-toxicology-atlas-schema

./: .gitignore  README.md  config.yaml  context.jsonld  index.html  linkml.justfile  pyproject.toml  schema_diagram.puml  sitemap.xml  temp.db  zebrafish_toxicology_atlas_schema.json  zebrafish_toxicology_atlas_schema.jsonld  zebrafish_toxicology_atlas_schema.owl.ttl  zebrafish_toxicology_atlas_schema.shacl.ttl  zebrafish_toxicology_atlas_schema.sql
.github/workflows/: pr-verify-pull-request.yaml
Control/: index.html
ControlImage/: index.html
Experiment/: index.html
ExposureEvent/: index.html
Image/: index.html
PhenotypeObservationSet/: index.html
Study/: index.html
VehicleEnumeration/: index.html
comment/: index.html
control/: index.html
control_image/: index.html
control_type/: index.html
experiment/: index.html
exposure_event/: index.html
fish/: index.html
image/: index.html
lab/: index.html
magnification/: index.html
phenotype/: index.html
phenotype_observation/: index.html
project/: zebrafish_toxicology_atlas_schema.py
project/graphql/: zebrafish_toxicology_atlas_schema.graphql
project/jsonld/: zebrafish_toxicology_atlas_schema.context.jsonld  zebrafish_toxicology_atlas_schema.jsonld
project/jsonschema/: zebrafish_toxicology_atlas_schema.schema.json
rearing_condition_comment/: index.html
resolution/: index.html
scale_bar/: index.html
search/: search_index.json
standard_rearing_condition/: index.html
stressor/: index.html
uuid/: index.html
vehicle/: index.html
vehicle_if_treated/: index.html
(+17 files in other folders)
