[project]
name = "zebrafish-toxicology-atlas-schema"
version = "0.1.0"
description = "Core Model for Zebrafish Toxicology Atlas"
authors = [
    {name = "Sabrina Toro"},
    {name = "Sierra Moxon"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "SQLAlchemy>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "linkml @ git+https://github.com/linkml/linkml.git@fix-3416-sqla-2x-fk-relationships#subdirectory=packages/linkml",
    "linkml-runtime>=1.1.24",
    "linkml-renderer>=0.1.2",
    "linkml-transformer>=0.1",
    "mkdocs-material>=8.2.8",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "schemasheets>=0.1.14",
    "yamllint>=1.35.1",
    "codespell>=2.4.1",
    "eralchemy2>=1.4.1",
    "pytest>=7.0",
]
docs = [
    "mkdocs-material>=8.2.8",
    "mkdocs-mermaid2-plugin>=1.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zebrafish_toxicology_atlas_schema"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0",
]
